flapivor/tests/m1/hopix/parser/good/117-for-2.hopix
val main =
  for x = 0 to 100 by 10 { y := x * 2 + !y }