flapivor/tests/m1/hopix/parser/bad/117-for-2.hopix
val main =
  for x = 0 by 10 to 100 { y := x * 2 + !y }